--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body{
     .resultado div{
         width: 20rem;
         height: 20rem;
-        margin-bottom: 2.8rem;
+        margin-bottom: .8rem;
     }
   .resultado div strong:nth-of-type(1){
     font-size: 7.2ram;
